<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckBoxes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="choose_tip">Please Chosse an item</string>
    <string name="eat">吃饭</string>
    <string name="sleep">睡觉</string>
    <string name="dota">打Dota</string>
    <string name="select_all">全选</string>

</resources>
