<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_tip"/>
    
    <CheckBox
        android:id="@+id/eatBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat"/>
    <CheckBox
        android:id="@+id/sleepBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep"/>
    <CheckBox
        android:id="@+id/dotaBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dota"/>
    <CheckBox
        android:id="@+id/selectAllBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"/>


</LinearLayout>
